gen/v24.1/rpk/rpk-topic-create.adoc
= rpk topic create
:description: rpk topic create

Create topics.

All topics created with this command will have the same number of partitions,
replication factor, and key/value configs.

For example,

	create -c cleanup.policy=compact -r 3 -p 20 foo bar

will create two topics, foo and bar, each with 20 partitions, 3 replicas, and
the cleanup.policy=compact config option set.

== Usage

[,bash]
----
rpk topic create [TOPICS...] [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-d, --dry |- |Dry run: validate the topic creation request; do not create topics.

|-h, --help |- |Help for create.

|-p, --partitions |int32 |Number of partitions to create per topic; -1 defaults to the cluster's default_topic_partitions (default -1).

|-r, --replicas |int16 |Replication factor (must be odd); -1 defaults to the cluster's default_topic_replications (default -1).

|-c, --topic-config |stringArray |key=value; Config parameters (repeatable; e.g. -c cleanup.policy=compact).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===